[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/wahooney.itch.io/white_grid.png" type="Texture" id=1]
[ext_resource path="res://addons/godot-xr-tools/objects/Viewport_2D_in_3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/misc/ring.obj" type="ArrayMesh" id=4]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/BallCourt.gd" type="Script" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.501961, 0.501961, 0.501961, 1 )
albedo_texture = ExtResource( 1 )
metallic_specular = 0.2
uv1_triplanar = true

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 5, 0.1, 5 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.5, 0.05, 2.5 )

[sub_resource type="SpatialMaterial" id=5]
metallic = 0.65
roughness = 0.54

[sub_resource type="CylinderMesh" id=4]
material = SubResource( 5 )
top_radius = 0.05
bottom_radius = 0.05
height = 3.0

[sub_resource type="CylinderShape" id=6]
radius = 0.05
height = 3.0

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.1, 1, 1 )

[sub_resource type="SphereShape" id=9]
radius = 0.1

[sub_resource type="ConcavePolygonShape" id=8]
data = PoolVector3Array( 0.3049, 0, -0.1263, 0.33, 0, 0, 0.2968, 0.0212, -0.1229, 0.2968, 0.0212, -0.1229, 0.33, 0, 0, 0.3212, 0.0212, 0, 0.2968, 0.0212, -0.1229, 0.3212, 0.0212, 0, 0.2772, 0.03, -0.1148, 0.2772, 0.03, -0.1148, 0.3212, 0.0212, 0, 0.3, 0.03, 0, 0.2772, 0.03, -0.1148, 0.3, 0.03, 0, 0.2576, 0.0212, -0.1067, 0.2576, 0.0212, -0.1067, 0.3, 0.03, 0, 0.2788, 0.0212, 0, 0.2576, 0.0212, -0.1067, 0.2788, 0.0212, 0, 0.2494, 0, -0.1033, 0.2494, 0, -0.1033, 0.2788, 0.0212, 0, 0.27, 0, 0, 0.2494, 0, -0.1033, 0.27, 0, 0, 0.2576, -0.0212, -0.1067, 0.2576, -0.0212, -0.1067, 0.27, 0, 0, 0.2788, -0.0212, 0, 0.2576, -0.0212, -0.1067, 0.2788, -0.0212, 0, 0.2772, -0.03, -0.1148, 0.2772, -0.03, -0.1148, 0.2788, -0.0212, 0, 0.3, -0.03, 0, 0.2772, -0.03, -0.1148, 0.3, -0.03, 0, 0.2968, -0.0212, -0.1229, 0.2968, -0.0212, -0.1229, 0.3, -0.03, 0, 0.3212, -0.0212, 0, 0.2968, -0.0212, -0.1229, 0.3212, -0.0212, 0, 0.3049, 0, -0.1263, 0.3049, 0, -0.1263, 0.3212, -0.0212, 0, 0.33, 0, 0, 0.2333, 0, -0.2333, 0.3049, 0, -0.1263, 0.2271, 0.0212, -0.2271, 0.2271, 0.0212, -0.2271, 0.3049, 0, -0.1263, 0.2968, 0.0212, -0.1229, 0.2271, 0.0212, -0.2271, 0.2968, 0.0212, -0.1229, 0.2121, 0.03, -0.2121, 0.2121, 0.03, -0.2121, 0.2968, 0.0212, -0.1229, 0.2772, 0.03, -0.1148, 0.2121, 0.03, -0.2121, 0.2772, 0.03, -0.1148, 0.1971, 0.0212, -0.1971, 0.1971, 0.0212, -0.1971, 0.2772, 0.03, -0.1148, 0.2576, 0.0212, -0.1067, 0.1971, 0.0212, -0.1971, 0.2576, 0.0212, -0.1067, 0.1909, 0, -0.1909, 0.1909, 0, -0.1909, 0.2576, 0.0212, -0.1067, 0.2494, 0, -0.1033, 0.1909, 0, -0.1909, 0.2494, 0, -0.1033, 0.1971, -0.0212, -0.1971, 0.1971, -0.0212, -0.1971, 0.2494, 0, -0.1033, 0.2576, -0.0212, -0.1067, 0.1971, -0.0212, -0.1971, 0.2576, -0.0212, -0.1067, 0.2121, -0.03, -0.2121, 0.2121, -0.03, -0.2121, 0.2576, -0.0212, -0.1067, 0.2772, -0.03, -0.1148, 0.2121, -0.03, -0.2121, 0.2772, -0.03, -0.1148, 0.2271, -0.0212, -0.2271, 0.2271, -0.0212, -0.2271, 0.2772, -0.03, -0.1148, 0.2968, -0.0212, -0.1229, 0.2271, -0.0212, -0.2271, 0.2968, -0.0212, -0.1229, 0.2333, 0, -0.2333, 0.2333, 0, -0.2333, 0.2968, -0.0212, -0.1229, 0.3049, 0, -0.1263, 0.1263, 0, -0.3049, 0.2333, 0, -0.2333, 0.1229, 0.0212, -0.2968, 0.1229, 0.0212, -0.2968, 0.2333, 0, -0.2333, 0.2271, 0.0212, -0.2271, 0.1229, 0.0212, -0.2968, 0.2271, 0.0212, -0.2271, 0.1148, 0.03, -0.2772, 0.1148, 0.03, -0.2772, 0.2271, 0.0212, -0.2271, 0.2121, 0.03, -0.2121, 0.1148, 0.03, -0.2772, 0.2121, 0.03, -0.2121, 0.1067, 0.0212, -0.2576, 0.1067, 0.0212, -0.2576, 0.2121, 0.03, -0.2121, 0.1971, 0.0212, -0.1971, 0.1067, 0.0212, -0.2576, 0.1971, 0.0212, -0.1971, 0.1033, 0, -0.2494, 0.1033, 0, -0.2494, 0.1971, 0.0212, -0.1971, 0.1909, 0, -0.1909, 0.1033, 0, -0.2494, 0.1909, 0, -0.1909, 0.1067, -0.0212, -0.2576, 0.1067, -0.0212, -0.2576, 0.1909, 0, -0.1909, 0.1971, -0.0212, -0.1971, 0.1067, -0.0212, -0.2576, 0.1971, -0.0212, -0.1971, 0.1148, -0.03, -0.2772, 0.1148, -0.03, -0.2772, 0.1971, -0.0212, -0.1971, 0.2121, -0.03, -0.2121, 0.1148, -0.03, -0.2772, 0.2121, -0.03, -0.2121, 0.1229, -0.0212, -0.2968, 0.1229, -0.0212, -0.2968, 0.2121, -0.03, -0.2121, 0.2271, -0.0212, -0.2271, 0.1229, -0.0212, -0.2968, 0.2271, -0.0212, -0.2271, 0.1263, 0, -0.3049, 0.1263, 0, -0.3049, 0.2271, -0.0212, -0.2271, 0.2333, 0, -0.2333, 0, 0, -0.33, 0.1263, 0, -0.3049, 0, 0.0212, -0.3212, 0, 0.0212, -0.3212, 0.1263, 0, -0.3049, 0.1229, 0.0212, -0.2968, 0, 0.0212, -0.3212, 0.1229, 0.0212, -0.2968, 0, 0.03, -0.3, 0, 0.03, -0.3, 0.1229, 0.0212, -0.2968, 0.1148, 0.03, -0.2772, 0, 0.03, -0.3, 0.1148, 0.03, -0.2772, 0, 0.0212, -0.2788, 0, 0.0212, -0.2788, 0.1148, 0.03, -0.2772, 0.1067, 0.0212, -0.2576, 0, 0.0212, -0.2788, 0.1067, 0.0212, -0.2576, 0, 0, -0.27, 0, 0, -0.27, 0.1067, 0.0212, -0.2576, 0.1033, 0, -0.2494, 0, 0, -0.27, 0.1033, 0, -0.2494, 0, -0.0212, -0.2788, 0, -0.0212, -0.2788, 0.1033, 0, -0.2494, 0.1067, -0.0212, -0.2576, 0, -0.0212, -0.2788, 0.1067, -0.0212, -0.2576, 0, -0.03, -0.3, 0, -0.03, -0.3, 0.1067, -0.0212, -0.2576, 0.1148, -0.03, -0.2772, 0, -0.03, -0.3, 0.1148, -0.03, -0.2772, 0, -0.0212, -0.3212, 0, -0.0212, -0.3212, 0.1148, -0.03, -0.2772, 0.1229, -0.0212, -0.2968, 0, -0.0212, -0.3212, 0.1229, -0.0212, -0.2968, 0, 0, -0.33, 0, 0, -0.33, 0.1229, -0.0212, -0.2968, 0.1263, 0, -0.3049, -0.1263, 0, -0.3049, 0, 0, -0.33, -0.1229, 0.0212, -0.2968, -0.1229, 0.0212, -0.2968, 0, 0, -0.33, 0, 0.0212, -0.3212, -0.1229, 0.0212, -0.2968, 0, 0.0212, -0.3212, -0.1148, 0.03, -0.2772, -0.1148, 0.03, -0.2772, 0, 0.0212, -0.3212, 0, 0.03, -0.3, -0.1148, 0.03, -0.2772, 0, 0.03, -0.3, -0.1067, 0.0212, -0.2576, -0.1067, 0.0212, -0.2576, 0, 0.03, -0.3, 0, 0.0212, -0.2788, -0.1067, 0.0212, -0.2576, 0, 0.0212, -0.2788, -0.1033, 0, -0.2494, -0.1033, 0, -0.2494, 0, 0.0212, -0.2788, 0, 0, -0.27, -0.1033, 0, -0.2494, 0, 0, -0.27, -0.1067, -0.0212, -0.2576, -0.1067, -0.0212, -0.2576, 0, 0, -0.27, 0, -0.0212, -0.2788, -0.1067, -0.0212, -0.2576, 0, -0.0212, -0.2788, -0.1148, -0.03, -0.2772, -0.1148, -0.03, -0.2772, 0, -0.0212, -0.2788, 0, -0.03, -0.3, -0.1148, -0.03, -0.2772, 0, -0.03, -0.3, -0.1229, -0.0212, -0.2968, -0.1229, -0.0212, -0.2968, 0, -0.03, -0.3, 0, -0.0212, -0.3212, -0.1229, -0.0212, -0.2968, 0, -0.0212, -0.3212, -0.1263, 0, -0.3049, -0.1263, 0, -0.3049, 0, -0.0212, -0.3212, 0, 0, -0.33, -0.2333, 0, -0.2333, -0.1263, 0, -0.3049, -0.2271, 0.0212, -0.2271, -0.2271, 0.0212, -0.2271, -0.1263, 0, -0.3049, -0.1229, 0.0212, -0.2968, -0.2271, 0.0212, -0.2271, -0.1229, 0.0212, -0.2968, -0.2121, 0.03, -0.2121, -0.2121, 0.03, -0.2121, -0.1229, 0.0212, -0.2968, -0.1148, 0.03, -0.2772, -0.2121, 0.03, -0.2121, -0.1148, 0.03, -0.2772, -0.1971, 0.0212, -0.1971, -0.1971, 0.0212, -0.1971, -0.1148, 0.03, -0.2772, -0.1067, 0.0212, -0.2576, -0.1971, 0.0212, -0.1971, -0.1067, 0.0212, -0.2576, -0.1909, 0, -0.1909, -0.1909, 0, -0.1909, -0.1067, 0.0212, -0.2576, -0.1033, 0, -0.2494, -0.1909, 0, -0.1909, -0.1033, 0, -0.2494, -0.1971, -0.0212, -0.1971, -0.1971, -0.0212, -0.1971, -0.1033, 0, -0.2494, -0.1067, -0.0212, -0.2576, -0.1971, -0.0212, -0.1971, -0.1067, -0.0212, -0.2576, -0.2121, -0.03, -0.2121, -0.2121, -0.03, -0.2121, -0.1067, -0.0212, -0.2576, -0.1148, -0.03, -0.2772, -0.2121, -0.03, -0.2121, -0.1148, -0.03, -0.2772, -0.2271, -0.0212, -0.2271, -0.2271, -0.0212, -0.2271, -0.1148, -0.03, -0.2772, -0.1229, -0.0212, -0.2968, -0.2271, -0.0212, -0.2271, -0.1229, -0.0212, -0.2968, -0.2333, 0, -0.2333, -0.2333, 0, -0.2333, -0.1229, -0.0212, -0.2968, -0.1263, 0, -0.3049, -0.3049, 0, -0.1263, -0.2333, 0, -0.2333, -0.2968, 0.0212, -0.1229, -0.2968, 0.0212, -0.1229, -0.2333, 0, -0.2333, -0.2271, 0.0212, -0.2271, -0.2968, 0.0212, -0.1229, -0.2271, 0.0212, -0.2271, -0.2772, 0.03, -0.1148, -0.2772, 0.03, -0.1148, -0.2271, 0.0212, -0.2271, -0.2121, 0.03, -0.2121, -0.2772, 0.03, -0.1148, -0.2121, 0.03, -0.2121, -0.2576, 0.0212, -0.1067, -0.2576, 0.0212, -0.1067, -0.2121, 0.03, -0.2121, -0.1971, 0.0212, -0.1971, -0.2576, 0.0212, -0.1067, -0.1971, 0.0212, -0.1971, -0.2494, 0, -0.1033, -0.2494, 0, -0.1033, -0.1971, 0.0212, -0.1971, -0.1909, 0, -0.1909, -0.2494, 0, -0.1033, -0.1909, 0, -0.1909, -0.2576, -0.0212, -0.1067, -0.2576, -0.0212, -0.1067, -0.1909, 0, -0.1909, -0.1971, -0.0212, -0.1971, -0.2576, -0.0212, -0.1067, -0.1971, -0.0212, -0.1971, -0.2772, -0.03, -0.1148, -0.2772, -0.03, -0.1148, -0.1971, -0.0212, -0.1971, -0.2121, -0.03, -0.2121, -0.2772, -0.03, -0.1148, -0.2121, -0.03, -0.2121, -0.2968, -0.0212, -0.1229, -0.2968, -0.0212, -0.1229, -0.2121, -0.03, -0.2121, -0.2271, -0.0212, -0.2271, -0.2968, -0.0212, -0.1229, -0.2271, -0.0212, -0.2271, -0.3049, 0, -0.1263, -0.3049, 0, -0.1263, -0.2271, -0.0212, -0.2271, -0.2333, 0, -0.2333, -0.33, 0, 0, -0.3049, 0, -0.1263, -0.3212, 0.0212, 0, -0.3212, 0.0212, 0, -0.3049, 0, -0.1263, -0.2968, 0.0212, -0.1229, -0.3212, 0.0212, 0, -0.2968, 0.0212, -0.1229, -0.3, 0.03, 0, -0.3, 0.03, 0, -0.2968, 0.0212, -0.1229, -0.2772, 0.03, -0.1148, -0.3, 0.03, 0, -0.2772, 0.03, -0.1148, -0.2788, 0.0212, 0, -0.2788, 0.0212, 0, -0.2772, 0.03, -0.1148, -0.2576, 0.0212, -0.1067, -0.2788, 0.0212, 0, -0.2576, 0.0212, -0.1067, -0.27, 0, 0, -0.27, 0, 0, -0.2576, 0.0212, -0.1067, -0.2494, 0, -0.1033, -0.27, 0, 0, -0.2494, 0, -0.1033, -0.2788, -0.0212, 0, -0.2788, -0.0212, 0, -0.2494, 0, -0.1033, -0.2576, -0.0212, -0.1067, -0.2788, -0.0212, 0, -0.2576, -0.0212, -0.1067, -0.3, -0.03, 0, -0.3, -0.03, 0, -0.2576, -0.0212, -0.1067, -0.2772, -0.03, -0.1148, -0.3, -0.03, 0, -0.2772, -0.03, -0.1148, -0.3212, -0.0212, 0, -0.3212, -0.0212, 0, -0.2772, -0.03, -0.1148, -0.2968, -0.0212, -0.1229, -0.3212, -0.0212, 0, -0.2968, -0.0212, -0.1229, -0.33, 0, 0, -0.33, 0, 0, -0.2968, -0.0212, -0.1229, -0.3049, 0, -0.1263, -0.3049, 0, 0.1263, -0.33, 0, 0, -0.2968, 0.0212, 0.1229, -0.2968, 0.0212, 0.1229, -0.33, 0, 0, -0.3212, 0.0212, 0, -0.2968, 0.0212, 0.1229, -0.3212, 0.0212, 0, -0.2772, 0.03, 0.1148, -0.2772, 0.03, 0.1148, -0.3212, 0.0212, 0, -0.3, 0.03, 0, -0.2772, 0.03, 0.1148, -0.3, 0.03, 0, -0.2576, 0.0212, 0.1067, -0.2576, 0.0212, 0.1067, -0.3, 0.03, 0, -0.2788, 0.0212, 0, -0.2576, 0.0212, 0.1067, -0.2788, 0.0212, 0, -0.2494, 0, 0.1033, -0.2494, 0, 0.1033, -0.2788, 0.0212, 0, -0.27, 0, 0, -0.2494, 0, 0.1033, -0.27, 0, 0, -0.2576, -0.0212, 0.1067, -0.2576, -0.0212, 0.1067, -0.27, 0, 0, -0.2788, -0.0212, 0, -0.2576, -0.0212, 0.1067, -0.2788, -0.0212, 0, -0.2772, -0.03, 0.1148, -0.2772, -0.03, 0.1148, -0.2788, -0.0212, 0, -0.3, -0.03, 0, -0.2772, -0.03, 0.1148, -0.3, -0.03, 0, -0.2968, -0.0212, 0.1229, -0.2968, -0.0212, 0.1229, -0.3, -0.03, 0, -0.3212, -0.0212, 0, -0.2968, -0.0212, 0.1229, -0.3212, -0.0212, 0, -0.3049, 0, 0.1263, -0.3049, 0, 0.1263, -0.3212, -0.0212, 0, -0.33, 0, 0, -0.2333, 0, 0.2333, -0.3049, 0, 0.1263, -0.2271, 0.0212, 0.2271, -0.2271, 0.0212, 0.2271, -0.3049, 0, 0.1263, -0.2968, 0.0212, 0.1229, -0.2271, 0.0212, 0.2271, -0.2968, 0.0212, 0.1229, -0.2121, 0.03, 0.2121, -0.2121, 0.03, 0.2121, -0.2968, 0.0212, 0.1229, -0.2772, 0.03, 0.1148, -0.2121, 0.03, 0.2121, -0.2772, 0.03, 0.1148, -0.1971, 0.0212, 0.1971, -0.1971, 0.0212, 0.1971, -0.2772, 0.03, 0.1148, -0.2576, 0.0212, 0.1067, -0.1971, 0.0212, 0.1971, -0.2576, 0.0212, 0.1067, -0.1909, 0, 0.1909, -0.1909, 0, 0.1909, -0.2576, 0.0212, 0.1067, -0.2494, 0, 0.1033, -0.1909, 0, 0.1909, -0.2494, 0, 0.1033, -0.1971, -0.0212, 0.1971, -0.1971, -0.0212, 0.1971, -0.2494, 0, 0.1033, -0.2576, -0.0212, 0.1067, -0.1971, -0.0212, 0.1971, -0.2576, -0.0212, 0.1067, -0.2121, -0.03, 0.2121, -0.2121, -0.03, 0.2121, -0.2576, -0.0212, 0.1067, -0.2772, -0.03, 0.1148, -0.2121, -0.03, 0.2121, -0.2772, -0.03, 0.1148, -0.2271, -0.0212, 0.2271, -0.2271, -0.0212, 0.2271, -0.2772, -0.03, 0.1148, -0.2968, -0.0212, 0.1229, -0.2271, -0.0212, 0.2271, -0.2968, -0.0212, 0.1229, -0.2333, 0, 0.2333, -0.2333, 0, 0.2333, -0.2968, -0.0212, 0.1229, -0.3049, 0, 0.1263, -0.1263, 0, 0.3049, -0.2333, 0, 0.2333, -0.1229, 0.0212, 0.2968, -0.1229, 0.0212, 0.2968, -0.2333, 0, 0.2333, -0.2271, 0.0212, 0.2271, -0.1229, 0.0212, 0.2968, -0.2271, 0.0212, 0.2271, -0.1148, 0.03, 0.2772, -0.1148, 0.03, 0.2772, -0.2271, 0.0212, 0.2271, -0.2121, 0.03, 0.2121, -0.1148, 0.03, 0.2772, -0.2121, 0.03, 0.2121, -0.1067, 0.0212, 0.2576, -0.1067, 0.0212, 0.2576, -0.2121, 0.03, 0.2121, -0.1971, 0.0212, 0.1971, -0.1067, 0.0212, 0.2576, -0.1971, 0.0212, 0.1971, -0.1033, 0, 0.2494, -0.1033, 0, 0.2494, -0.1971, 0.0212, 0.1971, -0.1909, 0, 0.1909, -0.1033, 0, 0.2494, -0.1909, 0, 0.1909, -0.1067, -0.0212, 0.2576, -0.1067, -0.0212, 0.2576, -0.1909, 0, 0.1909, -0.1971, -0.0212, 0.1971, -0.1067, -0.0212, 0.2576, -0.1971, -0.0212, 0.1971, -0.1148, -0.03, 0.2772, -0.1148, -0.03, 0.2772, -0.1971, -0.0212, 0.1971, -0.2121, -0.03, 0.2121, -0.1148, -0.03, 0.2772, -0.2121, -0.03, 0.2121, -0.1229, -0.0212, 0.2968, -0.1229, -0.0212, 0.2968, -0.2121, -0.03, 0.2121, -0.2271, -0.0212, 0.2271, -0.1229, -0.0212, 0.2968, -0.2271, -0.0212, 0.2271, -0.1263, 0, 0.3049, -0.1263, 0, 0.3049, -0.2271, -0.0212, 0.2271, -0.2333, 0, 0.2333, 0, 0, 0.33, -0.1263, 0, 0.3049, 0, 0.0212, 0.3212, 0, 0.0212, 0.3212, -0.1263, 0, 0.3049, -0.1229, 0.0212, 0.2968, 0, 0.0212, 0.3212, -0.1229, 0.0212, 0.2968, 0, 0.03, 0.3, 0, 0.03, 0.3, -0.1229, 0.0212, 0.2968, -0.1148, 0.03, 0.2772, 0, 0.03, 0.3, -0.1148, 0.03, 0.2772, 0, 0.0212, 0.2788, 0, 0.0212, 0.2788, -0.1148, 0.03, 0.2772, -0.1067, 0.0212, 0.2576, 0, 0.0212, 0.2788, -0.1067, 0.0212, 0.2576, 0, 0, 0.27, 0, 0, 0.27, -0.1067, 0.0212, 0.2576, -0.1033, 0, 0.2494, 0, 0, 0.27, -0.1033, 0, 0.2494, 0, -0.0212, 0.2788, 0, -0.0212, 0.2788, -0.1033, 0, 0.2494, -0.1067, -0.0212, 0.2576, 0, -0.0212, 0.2788, -0.1067, -0.0212, 0.2576, 0, -0.03, 0.3, 0, -0.03, 0.3, -0.1067, -0.0212, 0.2576, -0.1148, -0.03, 0.2772, 0, -0.03, 0.3, -0.1148, -0.03, 0.2772, 0, -0.0212, 0.3212, 0, -0.0212, 0.3212, -0.1148, -0.03, 0.2772, -0.1229, -0.0212, 0.2968, 0, -0.0212, 0.3212, -0.1229, -0.0212, 0.2968, 0, 0, 0.33, 0, 0, 0.33, -0.1229, -0.0212, 0.2968, -0.1263, 0, 0.3049, 0.1263, 0, 0.3049, 0, 0, 0.33, 0.1229, 0.0212, 0.2968, 0.1229, 0.0212, 0.2968, 0, 0, 0.33, 0, 0.0212, 0.3212, 0.1229, 0.0212, 0.2968, 0, 0.0212, 0.3212, 0.1148, 0.03, 0.2772, 0.1148, 0.03, 0.2772, 0, 0.0212, 0.3212, 0, 0.03, 0.3, 0.1148, 0.03, 0.2772, 0, 0.03, 0.3, 0.1067, 0.0212, 0.2576, 0.1067, 0.0212, 0.2576, 0, 0.03, 0.3, 0, 0.0212, 0.2788, 0.1067, 0.0212, 0.2576, 0, 0.0212, 0.2788, 0.1033, 0, 0.2494, 0.1033, 0, 0.2494, 0, 0.0212, 0.2788, 0, 0, 0.27, 0.1033, 0, 0.2494, 0, 0, 0.27, 0.1067, -0.0212, 0.2576, 0.1067, -0.0212, 0.2576, 0, 0, 0.27, 0, -0.0212, 0.2788, 0.1067, -0.0212, 0.2576, 0, -0.0212, 0.2788, 0.1148, -0.03, 0.2772, 0.1148, -0.03, 0.2772, 0, -0.0212, 0.2788, 0, -0.03, 0.3, 0.1148, -0.03, 0.2772, 0, -0.03, 0.3, 0.1229, -0.0212, 0.2968, 0.1229, -0.0212, 0.2968, 0, -0.03, 0.3, 0, -0.0212, 0.3212, 0.1229, -0.0212, 0.2968, 0, -0.0212, 0.3212, 0.1263, 0, 0.3049, 0.1263, 0, 0.3049, 0, -0.0212, 0.3212, 0, 0, 0.33, 0.2333, 0, 0.2333, 0.1263, 0, 0.3049, 0.2271, 0.0212, 0.2271, 0.2271, 0.0212, 0.2271, 0.1263, 0, 0.3049, 0.1229, 0.0212, 0.2968, 0.2271, 0.0212, 0.2271, 0.1229, 0.0212, 0.2968, 0.2121, 0.03, 0.2121, 0.2121, 0.03, 0.2121, 0.1229, 0.0212, 0.2968, 0.1148, 0.03, 0.2772, 0.2121, 0.03, 0.2121, 0.1148, 0.03, 0.2772, 0.1971, 0.0212, 0.1971, 0.1971, 0.0212, 0.1971, 0.1148, 0.03, 0.2772, 0.1067, 0.0212, 0.2576, 0.1971, 0.0212, 0.1971, 0.1067, 0.0212, 0.2576, 0.1909, 0, 0.1909, 0.1909, 0, 0.1909, 0.1067, 0.0212, 0.2576, 0.1033, 0, 0.2494, 0.1909, 0, 0.1909, 0.1033, 0, 0.2494, 0.1971, -0.0212, 0.1971, 0.1971, -0.0212, 0.1971, 0.1033, 0, 0.2494, 0.1067, -0.0212, 0.2576, 0.1971, -0.0212, 0.1971, 0.1067, -0.0212, 0.2576, 0.2121, -0.03, 0.2121, 0.2121, -0.03, 0.2121, 0.1067, -0.0212, 0.2576, 0.1148, -0.03, 0.2772, 0.2121, -0.03, 0.2121, 0.1148, -0.03, 0.2772, 0.2271, -0.0212, 0.2271, 0.2271, -0.0212, 0.2271, 0.1148, -0.03, 0.2772, 0.1229, -0.0212, 0.2968, 0.2271, -0.0212, 0.2271, 0.1229, -0.0212, 0.2968, 0.2333, 0, 0.2333, 0.2333, 0, 0.2333, 0.1229, -0.0212, 0.2968, 0.1263, 0, 0.3049, 0.3049, 0, 0.1263, 0.2333, 0, 0.2333, 0.2968, 0.0212, 0.1229, 0.2968, 0.0212, 0.1229, 0.2333, 0, 0.2333, 0.2271, 0.0212, 0.2271, 0.2968, 0.0212, 0.1229, 0.2271, 0.0212, 0.2271, 0.2772, 0.03, 0.1148, 0.2772, 0.03, 0.1148, 0.2271, 0.0212, 0.2271, 0.2121, 0.03, 0.2121, 0.2772, 0.03, 0.1148, 0.2121, 0.03, 0.2121, 0.2576, 0.0212, 0.1067, 0.2576, 0.0212, 0.1067, 0.2121, 0.03, 0.2121, 0.1971, 0.0212, 0.1971, 0.2576, 0.0212, 0.1067, 0.1971, 0.0212, 0.1971, 0.2494, 0, 0.1033, 0.2494, 0, 0.1033, 0.1971, 0.0212, 0.1971, 0.1909, 0, 0.1909, 0.2494, 0, 0.1033, 0.1909, 0, 0.1909, 0.2576, -0.0212, 0.1067, 0.2576, -0.0212, 0.1067, 0.1909, 0, 0.1909, 0.1971, -0.0212, 0.1971, 0.2576, -0.0212, 0.1067, 0.1971, -0.0212, 0.1971, 0.2772, -0.03, 0.1148, 0.2772, -0.03, 0.1148, 0.1971, -0.0212, 0.1971, 0.2121, -0.03, 0.2121, 0.2772, -0.03, 0.1148, 0.2121, -0.03, 0.2121, 0.2968, -0.0212, 0.1229, 0.2968, -0.0212, 0.1229, 0.2121, -0.03, 0.2121, 0.2271, -0.0212, 0.2271, 0.2968, -0.0212, 0.1229, 0.2271, -0.0212, 0.2271, 0.3049, 0, 0.1263, 0.3049, 0, 0.1263, 0.2271, -0.0212, 0.2271, 0.2333, 0, 0.2333, 0.33, 0, 0, 0.3049, 0, 0.1263, 0.3212, 0.0212, 0, 0.3212, 0.0212, 0, 0.3049, 0, 0.1263, 0.2968, 0.0212, 0.1229, 0.3212, 0.0212, 0, 0.2968, 0.0212, 0.1229, 0.3, 0.03, 0, 0.3, 0.03, 0, 0.2968, 0.0212, 0.1229, 0.2772, 0.03, 0.1148, 0.3, 0.03, 0, 0.2772, 0.03, 0.1148, 0.2788, 0.0212, 0, 0.2788, 0.0212, 0, 0.2772, 0.03, 0.1148, 0.2576, 0.0212, 0.1067, 0.2788, 0.0212, 0, 0.2576, 0.0212, 0.1067, 0.27, 0, 0, 0.27, 0, 0, 0.2576, 0.0212, 0.1067, 0.2494, 0, 0.1033, 0.27, 0, 0, 0.2494, 0, 0.1033, 0.2788, -0.0212, 0, 0.2788, -0.0212, 0, 0.2494, 0, 0.1033, 0.2576, -0.0212, 0.1067, 0.2788, -0.0212, 0, 0.2576, -0.0212, 0.1067, 0.3, -0.03, 0, 0.3, -0.03, 0, 0.2576, -0.0212, 0.1067, 0.2772, -0.03, 0.1148, 0.3, -0.03, 0, 0.2772, -0.03, 0.1148, 0.3212, -0.0212, 0, 0.3212, -0.0212, 0, 0.2772, -0.03, 0.1148, 0.2968, -0.0212, 0.1229, 0.3212, -0.0212, 0, 0.2968, -0.0212, 0.1229, 0.33, 0, 0, 0.33, 0, 0, 0.2968, -0.0212, 0.1229, 0.3049, 0, 0.1263 )

[node name="BallCourt" type="StaticBody"]
script = ExtResource( 6 )

[node name="FloorMesh" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="FloorCollision" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="PoleMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07806, 1.5, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="PoleCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07806, 1.5, 0 )
shape = SubResource( 6 )

[node name="Board" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.881813, 2.84144, 0 )
screen_size = Vector2( 2, 2 )
viewport_size = Vector2( 200, 200 )
scene = ExtResource( 3 )
collision_layer = 0

[node name="BoardCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.966264, 2.84144, 0 )
shape = SubResource( 7 )

[node name="RingMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.470905, 2.1578, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 5 )

[node name="TopDetector" type="Area" parent="RingMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RingMesh/TopDetector"]
shape = SubResource( 9 )

[node name="BottomDetector" type="Area" parent="RingMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RingMesh/BottomDetector"]
shape = SubResource( 9 )

[node name="RingCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.470905, 2.1578, 0 )
shape = SubResource( 8 )

[node name="ScoreCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Ball" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26962, 0.200463, 0 )

[connection signal="body_entered" from="RingMesh/BottomDetector" to="." method="_on_BottomDetector_body_entered"]
[connection signal="timeout" from="ScoreCooldown" to="." method="_on_ScoreCooldown_timeout"]
